--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "web-ui",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "autoprefixer": "^10.4.14",
+    "element-plus": "^2.3.6",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.3",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2"
@@ -17,9 +20,16 @@
     "@types/node": "^20.2.5",
     "@vitejs/plugin-legacy": "^4.0.4",
     "@vitejs/plugin-vue": "^4.1.0",
+    "amfe-flexible": "^2.2.1",
+    "postcss-pxtorem": "^6.0.0",
+    "sass": "^1.63.2",
     "scss": "^0.2.4",
     "typescript": "^5.0.2",
+    "unplugin-auto-import": "^0.16.4",
+    "unplugin-vue-components": "^0.25.1",
     "vite": "^4.3.9",
+    "vite-plugin-html": "^3.2.0",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.4.2"
   }
 }
