--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@element-plus/icons-vue": "^2.1.0",
     "autoprefixer": "^10.4.14",
     "element-plus": "^2.3.6",
+    "gsap": "^3.12.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.3",
+    "three": "^0.154.0",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
+    "@esbuild/win32-x64": "^0.18.11",
     "@types/node": "^20.2.5",
     "@vitejs/plugin-legacy": "^4.0.4",
     "@vitejs/plugin-vue": "^4.1.0",
